--- a/fixed/templates/login.html
+++ b/fixed/templates/login.html
@@ -6,10 +6,29 @@
 </head>
 <body>
     <h1>Login</h1>
+    
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <p style="color: {% if category == 'error' %}red{% elif category == 'success' %}green{% else %}blue{% endif %};">
+                    {{ message }}
+                </p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    
     <form method="post">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username" required><br><br>
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required><br><br>
         <button type="submit">Login</button>
     </form>
+    
+    <p>
+        <a href="/register">Register</a> | 
+        <a href="/">Home</a>
+    </p>
 </body>
 </html>
